--- a/public/css/backbtn.css
+++ b/public/css/backbtn.css
@@ -1,30 +1,3 @@
-@charset "utf-8";
-h1 {
-	display: block;
-	font-size: 174%;
-	font-weight: bold;
-	color: #333;
-	border-bottom: 2px solid #EBF0DF;
-}
-
-.container {
-	padding: 4px;
-	margin: 2px;
-	border: #eee 1px solid;
-	width: auto;
-}
-
-textarea {
-	position: relative;
-	background: transparent;
-	height: auto;
-	width: auto;
-	resize: none;
-	overflow: hidden;
-	border: none;
-	outline: none;
-}
-
 /** レイヤー関係のスタイル */
 div.Layer {
 	position: absolute;
@@ -39,8 +12,8 @@ div.Layer span {
 	max-width: 100%;
 }
 
-div.Layer span b {
-	background: #d8dfea;
+div.Layer span .Layer_span  {
+    background: #d8dfea;
 	background: -webkit-gradient(linear, center top, center bottom, from(#dce6fb),
 		to(#bdcff1) );
 	background: -webkit-linear-gradient(#dce6fb, #bdcff1);
