--- a/public/css/hashtag.css
+++ b/public/css/hashtag.css
@@ -18,10 +18,11 @@ textarea {
 	position: relative;
 	background: transparent;
 	height: auto;
-	width: auto;
+	width: 1280px;
 	resize: none;
 	overflow: hidden;
-	border: none;
+	/* border: none; */
+	border:2px solid #d8dfea;  /* 枠線 */
 	outline: none;
 }
 
