--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,14 @@
-div.g-slide {
-  position: relative;
-  overflow: hidden;
+div.slide img {
+  /* position: relative;
+  overflow: hidden; */
   width: 50%;
+  height: auto;
   float: left;
-}
-
-div.g-slide iframe {
-  width: 100%;
-  height: 100%;
-  /* position: absolute; */
-  top: 0;
-  left: 0;
 }
 
 div.mv {
   width: 50%;
-  height: auto;
+  height: 360px;
   float: right;
 }
 
